src/components/wallet-item/wallet-item.scss
.atomikui-wallet-item {
  align-items: center;
  background: $gray-000;
  border: 0;
  border-radius: rem($border-radius);
  cursor: pointer;
  display: flex;
  font-family: inherit;
  font-size: inherit;
  height: rem(70);
  padding: rem(8 16);
  position: relative;
  text-align: left;
  width: 100%;

  &:hover,
  &.is-selected {
    background: $blue-000;
  }

  &__icon {
    align-items: center;
    align-self: stretch;
    display: flex;
    justify-content: center;
    width: rem(70);

    & > svg {
      height: 100%;
    }
  }

  &__label {
    flex: 1;
    padding: rem(0 32 0 16);
  }

  &__label-text {
    font-weight: $font-bold;
  }

  &__info {
    color: $gray-400;
    font-size: rem(14);
    line-height: 1.3;

    & > span {
      line-height: 0;
      vertical-align: sub;
    }
  }

  &__selected-icon {
    position: absolute;
    top: rem(16);
    right: rem(16);
  }

  .atomikui-wallet-item__default-icon {
    width: 100%;
  }

  &--grid {
    flex-direction: column;
    height: auto;
    justify-content: center;
    padding: rem(16);
    text-align: center;

    .atomikui-wallet-item__icon {
      margin-bottom: rem(8);
      text-align: center;
      width: auto;

      & > svg {
        width: rem(70);
      }
    }

    .atomikui-wallet-item__default-icon {
      width: rem(70);
    }

    .atomikui-wallet-item__label {
      flex: 0;
      padding: 0;
    }
  }
}

